# Zig-and-Qml-sample

./: .gitignore  README.md
qml_playground/: CMakeLists.txt  library.cpp  library.h  main.cpp
qml_playground/qml/: qml.qrc
zig-qt-playground/: build.zig
zig-qt-playground/src/: main.zig
